
Changed
~~~~~~~

- The qutebrowser icons got moved from `icons/` to `qutebrowser/icons` in the
  repository, so that it's possible for qutebrowser to load them using Python's
  resource system (rather than compiling them into a Qt resource file).
  Packagers are advised to use `misc/Makefile` if possible, which has been
  updated with the new paths.

[[v2.5.1]]
v2.5.1 (unreleased)
-------------------

Fixed
~~~~~

- The `qute-pass` userscript is marked as executable again.
- PDF.js now works properly again with the macOS and Windows releases.
- Fixes for various notification-related crashes:
  * With the `tiramisu` notification server (due to invalid behavior of the server, now a non-fatal error)
  * With the `budgie` notification server when closing a notification (due to invalid behavior of the server, now worked around)
  * When a server exits with an unsuccessful exit status (now a non-fatal error)
  * When a server couldn't be started successfully (now a non-fatal error)
- Fixes in userscripts:
  * The `qute-bitwarden` userscript now correctly searches for entries for
    sites on a subdomain of an unrecognized TLD. subdomain names. Previously
    `my.site.local` would have searched in bitwarden for `my.sitelocal`,
    losing the rightmost dot.

[[v2.5.0]]
v2.5.0 (2022-04-01)
-------------------

Deprecated
~~~~~~~~~~

- v2.5.x will be the last release of qutebrowser 2.
  **For the upcoming 3.0.0 release**, it's planned to drop support for various
  legacy platforms and libraries which are unsupported upstream, such as:
  * Qt before 5.15 LTS (plus adding support for Qt 6.2+)
  * Python 3.6
  * The QtWebKit backend
  * macOS 10.14 (via Homebrew)
  * 32-bit Windows (via Qt)
  * Windows 8 (via Qt)
  * Windows 10 before 1809 (via Qt)
  * Possibly other more minor dependency changes
- The `:rl-unix-word-rubout` command (`<Ctrl-W>` in command/prompt modes) has
  been deprecated. Use `:rl-rubout " "` instead.